--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.15.0",
     "faker": "^4.1.0",
     "mongoose": "^5.8.10",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.2",
     "react": "^16.10.1",
