--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Course Produce Checkout Component",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "react-dev": "webpack -w",
     "start": "nodemon ./server/index.js",
-    "seeder": "node ./database/faker.js"
+    "seeder": "node ./database/faker.js",
+    "jest": "jest --init"
   },
   "keywords": [],
   "author": "Victor Tu",
@@ -16,7 +17,9 @@
     "@babel/core": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
+    "jest": "^25.1.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
   },
