--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@babel/preset-react": "^7.0.0",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "jest": "^25.1.0",
+    "jest-environment-enzyme": "^7.1.2",
+    "jest-enzyme": "^7.1.2",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
   },
