--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.15.0",
     "faker": "^4.1.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.8.10",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.9.1",
