--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "nodemon ./server/index.js",
     "seeder": "node ./database/faker.js",
     "jest": "jest --init",
-    "build": "webpack"
+    "build": "webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "Victor Tu",
@@ -32,7 +32,8 @@
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
     "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9"
+    "webpack-cli": "^3.3.9",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "axios": "^0.19.2",
