--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
+    "compression-webpack-plugin": "^4.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
